# eu4-utils

./: .gitignore  Generate-Policy-Table.py  LICENSE  Paradox_LocParser.py  Paradox_Localisation.py  Parse_Idea_Group.py  README.md  Simple_Clausewitz.py  Simple_LexParser.py  count-missions.py  flake.nix  lexpar  pyproject.toml  simple_lexpaser.py
Ante-Bellum/: Generate-Policy-Table.py
Paradox_Localisation/: __init__.py  lexer.py  parser.py  utils.py
Simple_Clausewitz/: __init__.py  lexer.py  parser.py
aux/: table-md-to-html.py
hw_utils/: __init__.py  markdown.py  walk.py
