[tool.poetry]
name = "howard-eu4-utils"
version = "0.0.1"
description = "collection of scripts to deal with eu4 data"
authors = ["maxice8 <thinkabit.ukim@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    {include = "Simple_Clausewitz"},
    {include = "Paradox_Localisation"},
    {include = "hw_utils"},
    {include = "Generate-Policy-Table.py"},
    {include = "lexpar"},
    {include = "count-missions.py"}
]

[tool.poetry.dependencies]
python = "^3.10"
sly = "^0.4"
Markdown = "^3.4.1"
Jinja2 = "^3.1.2"


[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
autopep8 = "^1.7.0"
mypy = "^0.981"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
